; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/mkimg/extr_bsd.c_bsd_metadata.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/mkimg/extr_bsd.c_bsd_metadata.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SCHEME_META_IMG_START = common dso_local global i64 0, align 8
@BSD_BOOTBLOCK_SIZE = common dso_local global i32 0, align 4
@secsz = common dso_local global i32 0, align 4
@SCHEME_META_IMG_END = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i32)* @bsd_metadata to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bsd_metadata(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i64, i64* %3, align 8
  %6 = load i64, i64* @SCHEME_META_IMG_START, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %14

8:                                                ; preds = %2
  %9 = load i32, i32* @BSD_BOOTBLOCK_SIZE, align 4
  %10 = load i32, i32* @secsz, align 4
  %11 = sdiv i32 %9, %10
  %12 = load i32, i32* %4, align 4
  %13 = add nsw i32 %12, %11
  store i32 %13, i32* %4, align 4
  br label %25

14:                                               ; preds = %2
  %15 = load i64, i64* %3, align 8
  %16 = load i64, i64* @SCHEME_META_IMG_END, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %21

18:                                               ; preds = %14
  %19 = load i32, i32* %4, align 4
  %20 = call i32 @round_cylinder(i32 %19)
  store i32 %20, i32* %4, align 4
  br label %24

21:                                               ; preds = %14
  %22 = load i32, i32* %4, align 4
  %23 = call i32 @round_block(i32 %22)
  store i32 %23, i32* %4, align 4
  br label %24

24:                                               ; preds = %21, %18
  br label %25

25:                                               ; preds = %24, %8
  %26 = load i32, i32* %4, align 4
  ret i32 %26
}

declare dso_local i32 @round_cylinder(i32) #1

declare dso_local i32 @round_block(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
